--- a/.gitignore
+++ b/.gitignore
@@ -91,7 +91,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -121,7 +120,8 @@ dist
 # TernJS port file
 .tern-port
 
-# Stores VSCode versions used for testing VSCode extensions
+# vscode
+.vscode
 .vscode-test
 
 # yarn v2
