--- a/package.json
+++ b/package.json
@@ -1,34 +1,51 @@
 {
   "name": "es-utils-ts",
+  "version": "0.0.0",
+  "license": "ISC",
+  "repository": "github:strawhat-dev/es-utils-ts",
   "type": "module",
-  "packageManager": "^pnpm@8.0.0",
+  "sideEffects": false,
+  "module": "./dist/index.js",
+  "exports": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=14.16"
   },
-  "exports": {
-    "import": "./dist/index.js",
-    "types": "./dist/index.d.ts"
-  },
   "scripts": {
     "build": "tsup",
-    "clean": "pnpm dlx rimraf dist",
-    "clean-all": "pnpm dlx rimraf dist pnpm-lock.yaml node_modules"
+    "dev": "tsup --watch",
+    "clean": "pnpm --shell-mode dlx rimraf dist pnpm-lock.yaml node_modules"
   },
-  "dependencies": {
+  "peerDependencies": {
     "deepmerge-ts": "^5.1.0"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
+    "globby": "^13.1.4",
     "prettier": "^2.8.7",
     "tsup": "^6.7.0",
     "type-fest": "^3.8.0",
     "typescript": "^5.0.4"
   },
+  "pnpm": {
+    "overrides": {
+      "tsup>rollup": "3.20.4"
+    }
+  },
   "prettier": {
     "singleQuote": true
+  },
+  "np": {
+    "tests": false,
+    "branch": "main",
+    "contents": "dist"
   }
 }
