--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,13 @@
     "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "suppressImplicitAnyIndexErrors": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": { "@/*": ["src/*.js", "src/*/index.js"] }
   },
-  "include": ["src/**/*.ts", "tsup.config.ts", ".eslintrc.cjs"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src/**/*.ts", "tsup.config.ts", ".eslintrc.cjs"]
 }
