--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.15.12",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.38.0",
@@ -43,8 +43,8 @@
     }
   },
   "np": {
-    "tests": false,
-    "branch": "main"
+    "branch": "main",
+    "tests": false
   },
   "prettier": {
     "singleQuote": true
