--- a/package.json
+++ b/package.json
@@ -9,39 +9,40 @@
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "github:strawhat-dev/es-utils-ts",
+  "engines": {
+    "node": ">=14.16"
+  },
   "files": [
     "dist",
     "package.json"
   ],
-  "engines": {
-    "node": ">=14.16"
-  },
-  "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "clean": "pnpm --shell-mode dlx rimraf dist pnpm-lock.yaml node_modules"
-  },
-  "peerDependencies": {
-    "deepmerge-ts": "^5.1.0"
-  },
-  "devDependencies": {
-    "@types/eslint": "^8.37.0",
-    "@types/node": "^18.15.13",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "globby": "^13.1.4",
-    "prettier": "^2.8.7",
-    "tsup": "^6.7.0",
-    "type-fest": "^3.8.0",
-    "typescript": "^5.0.4"
-  },
   "np": {
     "branch": "main",
     "tests": false
   },
-  "prettier": {
-    "singleQuote": true
+  "scripts": {
+    "build": "eslint && tsup",
+    "dev": "tsup --watch",
+    "clean": "pnpm --shell-mode dlx rimraf dist pnpm-lock.yaml node_modules"
+  },
+  "peerDependencies": {
+    "deep-equal": "^2.2.0",
+    "deepmerge-ts": "^5.1.0",
+    "rfdc": "^1.3.0"
+  },
+  "devDependencies": {
+    "@types/deep-equal": "^1.0.1",
+    "@types/eslint": "^8.37.0",
+    "@types/node": "^18.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-tree-shaking": "^1.10.0",
+    "globby": "^13.1.4",
+    "prettier": "^2.8.8",
+    "tsup": "^6.7.0",
+    "type-fest": "^3.8.0",
+    "typescript": "^5.0.4"
   }
 }
