--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
   "peerDependencies": {
     "deep-equal": "^2.2.0",
     "deepmerge-ts": "^5.1.0",
+    "just-range": "^4.2.0",
+    "object-inspect": "^1.12.3",
     "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
+    "@types/object-inspect": "^1.8.1",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "eslint": "^8.39.0",
