--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "peerDependencies": {
     "deep-equal": "^2.2.0",
     "deepmerge-ts": "^5.1.0",
+    "escape-string-regexp": "^5.0.0",
     "just-range": "^4.2.0",
     "object-inspect": "^1.12.3",
     "rfdc": "^1.3.0"
@@ -45,7 +46,7 @@
     "globby": "^13.1.4",
     "prettier": "^2.8.8",
     "tsup": "^6.7.0",
-    "type-fest": "^3.9.0",
+    "type-fest": "^3.10.0",
     "typescript": "^5.0.4"
   }
 }
