--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
   "type": "module",
   "sideEffects": false,
   "module": "./dist/index.js",
-  "types": "./dist/types.d.ts",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js",
     "./conditionals": "./dist/conditionals/index.js",
     "./html": "./dist/html/index.js",
     "./lib": "./dist/lib/index.js",
     "./objects": "./dist/objects/index.js",
-    "./externals": "./dist/externals.js",
-    "./types": "./dist/types.d.ts"
+    "./externals": "./dist/externals.js"
   },
   "engines": {
     "node": ">=14.16"
