--- a/package.json
+++ b/package.json
@@ -11,11 +11,26 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js",
-    "./conditionals": "./dist/conditionals/index.js",
-    "./html": "./dist/html/index.js",
-    "./lib": "./dist/lib/index.js",
-    "./objects": "./dist/objects/index.js",
-    "./externals": "./dist/externals.js"
+    "./conditionals": {
+      "import": "./dist/conditionals/index.js",
+      "types": "./dist/conditionals/index.d.ts"
+    },
+    "./html": {
+      "import": "./dist/html/index.js",
+      "types": "./dist/html/index.d.ts"
+    },
+    "./lib": {
+      "import": "./dist/lib/index.js",
+      "types": "./dist/lib/index.d.ts"
+    },
+    "./objects": {
+      "import": "./dist/objects/index.js",
+      "types": "./dist/objects/index.d.ts"
+    },
+    "./externals": {
+      "import": "./dist/externals.js",
+      "types": "./dist/externals.d.ts"
+    }
   },
   "engines": {
     "node": ">=14.16"
