--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
       "import": "./dist/objects/index.js",
       "types": "./dist/objects/index.d.ts"
     },
+    "./path": {
+      "import": "./dist/path.js",
+      "types": "./dist/path.d.ts"
+    },
     "./externals": {
       "import": "./dist/externals.js",
       "types": "./dist/externals.d.ts"
@@ -58,10 +62,10 @@
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
     "@types/eslint": "^8.37.0",
-    "@types/node": "^20.1.0",
+    "@types/node": "^20.1.1",
     "@types/object-inspect": "^1.8.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tree-shaking": "^1.10.0",
