--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "node": ">=14.16"
   },
   "files": [
-    "dist",
-    "package.json"
+    "dist"
   ],
   "np": {
     "branch": "main",
@@ -57,6 +56,7 @@
     "deepmerge-ts": "^5.1.0",
     "escape-string-regexp": "^5.0.0",
     "object-inspect": "^1.12.3",
+    "path-browserify": "^1.0.1",
     "rfdc": "^1.3.0"
   },
   "devDependencies": {
@@ -64,6 +64,7 @@
     "@types/eslint": "^8.37.0",
     "@types/node": "^20.1.1",
     "@types/object-inspect": "^1.8.1",
+    "@types/path-browserify": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
