--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,13 @@
     "moduleDetection": "force",
     "moduleResolution": "bundler",
     "strict": true,
+    "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
-    "skipLibCheck": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "verbatimModuleSyntax": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
