--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    "./types": {
-      "types": "./dist/types.d.ts"
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     },
     "./externals": {
       "import": "./dist/externals.js",
@@ -36,6 +37,9 @@
     "./objects": {
       "import": "./dist/objects/index.js",
       "types": "./dist/objects/index.d.ts"
+    },
+    "./types": {
+      "types": "./dist/types.d.ts"
     }
   },
   "engines": {
