--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
-    "baseUrl": ".",
-    "paths": { "@/*": ["src/*"] }
+    "rootDirs": ["src", "dist"]
   },
   "include": ["src/**/*.ts", "tsup.config.ts"]
 }
