--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
+    "./type-utils": {
+      "types": "./dist/type-utils.d.ts"
+    },
     "./externals": {
       "import": "./dist/externals.js",
       "types": "./dist/externals.d.ts"
     },
-    "./path": {
-      "import": "./dist/path.js",
-      "types": "./dist/path.d.ts"
+    "./common": {
+      "import": "./dist/common/index.js",
+      "types": "./dist/common/index.d.ts"
     },
     "./conditionals": {
       "import": "./dist/conditionals/index.js",
@@ -30,16 +33,13 @@
       "import": "./dist/html/index.js",
       "types": "./dist/html/index.d.ts"
     },
-    "./lib": {
-      "import": "./dist/lib/index.js",
-      "types": "./dist/lib/index.d.ts"
-    },
     "./objects": {
       "import": "./dist/objects/index.js",
       "types": "./dist/objects/index.d.ts"
     },
-    "./types": {
-      "types": "./dist/types.d.ts"
+    "./path": {
+      "import": "./dist/path/index.js",
+      "types": "./dist/path/index.d.ts"
     }
   },
   "engines": {
@@ -53,8 +53,8 @@
     "tests": false
   },
   "scripts": {
+    "build": "eslint && tsup",
     "rimraf": "pnpm -c dlx rimraf",
-    "build": "eslint && pnpm rimraf dist && tsc",
     "clean": "pnpm rimraf pnpm-lock.yaml node_modules"
   },
   "peerDependencies": {
@@ -68,15 +68,15 @@
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
     "@types/eslint": "^8.37.0",
-    "@types/node": "^20.1.3",
+    "@types/node": "^20.1.4",
     "@types/object-inspect": "^1.8.1",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tree-shaking": "^1.10.0",
-    "globby": "^13.1.4",
     "prettier": "^2.8.8",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.4"
   }
 }
