--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/eslint": "^8.37.0",
     "@types/node": "^20.1.4",
     "@types/object-inspect": "^1.8.1",
+    "@types/path-browserify": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
