--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "scripts": {
     "build": "eslint && tsup",
     "rimraf": "pnpm -c dlx rimraf",
-    "clean": "pnpm rimraf pnpm-lock.yaml node_modules"
+    "clean": "pnpm rimraf pnpm-lock.yaml node_modules dist"
   },
   "peerDependencies": {
     "deep-equal": "^2.2.1",
@@ -69,10 +69,10 @@
     "@types/deep-equal": "^1.0.1",
     "@types/eslint": "^8.37.0",
     "@types/eslint-config-prettier": "^6.11.0",
-    "@types/node": "^20.1.4",
+    "@types/node": "^20.1.5",
     "@types/object-inspect": "^1.8.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tree-shaking": "^1.10.0",
