--- a/package.json
+++ b/package.json
@@ -8,76 +8,52 @@
   "type": "module",
   "sideEffects": false,
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    },
+    ".": "./dist/index.js",
+    "./common": "./dist/common/index.js",
+    "./conditionals": "./dist/conditionals/index.js",
+    "./externals": "./dist/externals.js",
+    "./html": "./dist/html/index.js",
+    "./objects": "./dist/objects/index.js",
+    "./path": "./dist/path/index.js",
     "./type-utils": {
       "types": "./dist/type-utils.d.ts"
-    },
-    "./externals": {
-      "import": "./dist/externals.js",
-      "types": "./dist/externals.d.ts"
-    },
-    "./common": {
-      "import": "./dist/common/index.js",
-      "types": "./dist/common/index.d.ts"
-    },
-    "./conditionals": {
-      "import": "./dist/conditionals/index.js",
-      "types": "./dist/conditionals/index.d.ts"
-    },
-    "./html": {
-      "import": "./dist/html/index.js",
-      "types": "./dist/html/index.d.ts"
-    },
-    "./objects": {
-      "import": "./dist/objects/index.js",
-      "types": "./dist/objects/index.d.ts"
-    },
-    "./path": {
-      "import": "./dist/path/index.js",
-      "types": "./dist/path/index.d.ts"
     }
-  },
-  "engines": {
-    "node": ">=14.16"
   },
   "files": [
     "dist"
   ],
-  "np": {
-    "branch": "main",
-    "tests": false
+  "engines": {
+    "node": ">=16.6.0"
   },
   "scripts": {
-    "build": "eslint && tsup",
     "rimraf": "pnpm -c dlx rimraf",
+    "build": "eslint && pnpm rimraf dist && tsc",
     "clean": "pnpm rimraf pnpm-lock.yaml node_modules dist"
   },
   "peerDependencies": {
     "deep-equal": "^2.2.1",
     "deepmerge-ts": "^5.1.0",
     "escape-string-regexp": "^5.0.0",
-    "object-inspect": "^1.12.3",
     "rfdc": "^1.3.0",
-    "type-fest": "^3.10.0"
+    "type-fest": "^3.11.1"
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.1",
-    "@types/eslint": "^8.37.0",
+    "@types/eslint": "^8.40.0",
     "@types/eslint-config-prettier": "^6.11.0",
-    "@types/node": "^20.1.5",
-    "@types/object-inspect": "^1.8.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
+    "@types/node": "^20.2.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-tree-shaking": "^1.10.0",
     "prettier": "^2.8.8",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
+  },
+  "np": {
+    "branch": "main",
+    "tests": false
   }
 }
